Bug 1148978 - Remove plugin window update composition deferment. r=mattwoodrow

MozReview-Commit-ID: AaRSO8RgY81